[gd_scene load_steps=5 format=3 uid="uid://cs1tj6sprtojj"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_cllbq"]
[ext_resource type="Texture2D" uid="uid://b7x3vvaudhjhi" path="res://assets/plug_player.png" id="2_ik2p2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_igg8v"]
size = Vector2(20, 11.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_xw4x6"]
radius = 885.946

[node name="Player" type="CharacterBody2D" groups=["player"]]
position = Vector2(-1, -58)
motion_mode = 1
script = ExtResource("1_cllbq")
autopilot = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 56.875)
shape = SubResource("RectangleShape2D_igg8v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_ik2p2")
region_enabled = true
region_rect = Rect2(0, 0, 159.533, 321.387)

[node name="Camera2D" type="Camera2D" parent="."]
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.0
drag_top_margin = 0.0
drag_right_margin = 0.0
drag_bottom_margin = 0.0

[node name="Attacks" type="Node2D" parent="."]

[node name="VinylTimer" type="Timer" parent="Attacks"]
unique_name_in_owner = true
wait_time = 3.0

[node name="VinylAttackTimer" type="Timer" parent="Attacks/VinylTimer"]
unique_name_in_owner = true
wait_time = 0.15

[node name="EnemyDetectionArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_xw4x6")

[connection signal="timeout" from="Attacks/VinylTimer" to="." method="_on_vinyl_timer_timeout"]
[connection signal="timeout" from="Attacks/VinylTimer/VinylAttackTimer" to="." method="_on_vinyl_attack_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
